...
import com.android.joinme.R
import com.android.joinme.ui.theme.Dimens
import com.android.joinme.ui.theme.customColors
import kotlinx.coroutines.launch

object CreateEventScreenTestTags {
  const val INPUT_EVENT_TYPE = "inputEventType"
  const val INPUT_EVENT_TITLE = "inputEventTitle"
  const val INPUT_EVENT_DESCRIPTION = "inputEventDescription"
  const val INPUT_EVENT_LOCATION = "inputEventLocation"
  const val INPUT_EVENT_LOCATION_SUGGESTIONS = "inputEventLocationSuggestions"
  const val FOR_EACH_INPUT_EVENT_LOCATION_SUGGESTION = "inputEventLocationSuggestions"
  const val INPUT_EVENT_MAX_PARTICIPANTS = "inputEventMaxParticipants"
  const val INPUT_EVENT_DURATION = "inputEventDuration"
  const val INPUT_EVENT_DATE = "inputEventDate"
  const val INPUT_EVENT_TIME = "inputEventTime"
  const val INPUT_EVENT_VISIBILITY = "inputEventVisibility"
  const val INPUT_EVENT_GROUP = "inputEventGroup"
  const val BUTTON_SAVE_EVENT = "buttonSaveEvent"
  const val ERROR_MESSAGE = "errorMessage"
}

private const val STANDALONE_EVENT_LABEL = "Standalone Event"

@OptIn(ExperimentalMaterial3Api::class)
...
